--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
     </properties>
 
     <dependencies>
