--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.h2.console.path=/h2-console
 #spring.datasource.driverClassName=org.h2.Driver
-
+java.runtime.version=11
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -40,6 +40,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+
 
 
 
